# thought-cloud

./: Cargo.toml  Makefile.toml  README.md
app/: Cargo.toml
app/src/: main.rs
backend/: Cargo.toml
backend/src/: main.rs
engine/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs
frontend/src/api/: mod.rs
frontend/src/components/: bottom.rs  center.rs  headerbar.rs  leftsidebar.rs  mod.rs  rightsidebar.rs  topleft.rs  topright.rs
frontend/src/state/: mod.rs  reducer.rs  selector.rs  slice.rs
frontend/src/util/: callbacks.rs  futures.rs  mod.rs
static/: index.html  main.css
