[package]
name = "backend"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket"}
serde_millis = "0.1"
serde_json = "1"
rocket_cors = {git = "https://github.com/HenningHolmDE/rocket_cors/", branch="rocket_async", commit = "3426bf1799f13b591d1f2cac18bbccf98a352732"}
serde = {version="1", features=['derive']}
